# Optimix-Compiler

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  RESUME_GUIDE.md  flowchart.md  optimix  test_lexer
.github/workflows/: build.yml
compiler/Linux/: optimix
compiler/Mac/: optimix
docs/: GRAMMAR.md  OPTIMIZATION.md  PROJECT.md
examples/: comprehensive.optx  factorial.optx  fibonacci.optx  print_loop.optx
include/optimix/: common.h
include/optimix/ast/: AST.h
include/optimix/codegen/: IRInterpreter.h  Interpreter.h
include/optimix/ir/: IR.h  IRBuilder.h  SSA.h
include/optimix/lexer/: Lexer.h  Token.h
include/optimix/parser/: Parser.h
src/: main.cpp
src/codegen/: IRInterpreter.cpp  Interpreter.cpp
src/ir/: IR.cpp  IRBuilder.cpp  SSA.cpp
src/lexer/: Lexer.cpp
src/parser/: Parser.cpp
tests/: CMakeLists.txt  main_test.cpp  test_lexer.cpp  test_lexer.h  test_runner.py
